# csd-cpp

./: .gitignore  CMakeLists.txt  GEMINI.md  IFLOW.md  README.md  README_8md.html  _r_e_a_d_m_e_8md.html  about.html  about_8dox.html  annotated.html  classcsd_1_1Csd.html  classcsd_1_1_csd.html  classcsd_1_1invalid__csd__format-members.html  classcsd_1_1invalid__csd__format.html  classcsd_1_1invalid__csd__format__coll__graph.map  classcsd_1_1invalid__csd__format__inherit__graph.md5  classes.html  csd_8hpp.html  csd_8hpp__incl.map  csd_8hpp__incl.md5  csd_8hpp_source.html  csd__multiplier_8hpp.html  csd__multiplier_8hpp__incl.map  csd__multiplier_8hpp__incl.md5  csd__multiplier_8hpp_source.html  csd_example.txt  dir_138aff360eb965c43b94267b8d1ce09e.html  dir_31a378c84b956866319ca9d9294f1959.html  dir_a0c318f5b52a0cf7f13b5cc4cf6affc5.html  doc-dev.yml  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  graph_legend.html  greeter_8h.html  group__csd__functions.html  group__lcsre__functions.html  (+32 more)
.cache/clangd/index/: BM_switch.cpp.D65CEC1165EA8ED1.idx  csd.hpp.E7D60CE213E6EB96.idx  doctest.cpp.A9FDB2BD9633A363.idx  doctest.h.EF1D845BEBAE5FA8.idx  doctest_fwd.h.054AA44A9AFF4314.idx  greeter.cpp.98F4586EB2D7AAA8.idx  greeter.h.0E4286FA8DB455B9.idx  lcsre.cpp.A0FC4C6E54955B56.idx  main.cpp.35942F8DCA7E1C0E.idx  test_csd.cpp.F64B800D5E1A11DB.idx  version.h.4B07B5B4CAB5D837.idx
.github/workflows/: benchmark.yml  install.yml  macos.yml  standalone.yml  test.yml  ubuntu.yml  windows-xmake.yml  windows.yml
.trunk/: actions  logs  notifications  out
bench/: BM_switch.cpp  CMakeLists.txt
cmake/: specific.cmake
documentation/: CMakeLists.txt  conf.py
experiments/: csd_multiplier.cpp
include/csd/: csd.hpp  csd_multiplier.hpp  greeter.h  lcsre.hpp  logger.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  namespaces_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
source/: csd.cpp  csd_multiplier.cpp  greeter.cpp  greeter.tpp  lcsre.cpp  logger.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp  main_with_spdlog.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  greeter.old  greeter.tpp  main.cpp  test_csd.cpp  test_csd_multiplier.cpp  test_lcsre.cpp  test_rapidcheck.cpp  test_stress.cpp
test_installed/: CMakeLists.txt
